<resources>
    <string name="app_name">FindMe</string>
    <string name="btn_Registrarse">Registrarse</string>
    <string name="btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="btn_iniciar_sesion_como_invi">Toca aquí para comenzar sesión como invitado</string>
    <string name="title_activity_main_map">MainActivityMap</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login and registry -->
    <string name="prompt_email1">Email del buscador</string>
    <string name="prompt_ci">Cédula de Identidad</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_names">Nombres</string>
    <string name="prompt_last_names">Apellidos</string>
    <string name="prompt_DINASED_number">Número único de DINASED</string>
    <string name="prompt_tipo_usuario">Número único de DINASED</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registro_forum">Sign in</string>
    <string name="active_searches_title">Active Searches</string>
    <string name="found_people_title">Found</string>
    <string name="active_searches_button_enterToMap">Enter Map</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="my_alerts_title">My Alerts</string>
    <string name="all_aproved_alerts">Aproved Alerts</string>
    <string name="all_alerts">All Alerts</string>
    <string name="add_new_alert">Add new Alert</string>
    <string name="approve_alert">Approve Alert</string>
    <string name="reject_alert">Reject Alert</string>
    <string name="alert_type">Alert Type</string>
    <string name="alert_Title">Alert Title</string>
    <string name="alert_description">Alert Description</string>
    <string name="alert_coordinates">Alert Coordinates</string>
    <string name="send_new_alert">Send Alert</string>

    <!--Strings Related to Active Searches-->
    <string name="age">Age: </string>
    <string name="gender">Gender: </string>
    <string name="description">Description: </string>
    <string name="last_seen">Last Seen: </string>
    <string name="active_search_name">Full Name </string>
    <string name="active_search_description">Person description</string>
    <string name="active_search_gender">Gender</string>
    <string name="active_search_Age">Age</string>
    <string name="active_search_is_found_yet">Is He/She Found Yet</string>
    <string name="active_search_switch_true">Yes</string>
    <string name="active_search_switch_false">Very soon</string>
    <string name="active_search_create">Create Search</string>
    <!--Strings Related to Errors on Active Searches form-->
    <string name="full_name_empty">Please, add individual\'s full name</string>
    <string name="gender_empty">Please, select individual\'s gender</string>
    <string name="age_empty">For search accuracy, please provide individual\'s age</string>
    <string name="description_empty">For search accuracy, please provide individual\'s description</string>
    <string name="last_seen_empty">For search accuracy, please provide individual\'s last known location</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="title_activity_maps">Map</string>
    <!-- Strings related to MainActivity
     -->
    <string name="turn_on_gps">Please enable Location to start tracking</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
</resources>
