<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ec.edu.epn.findme.RegistroActivity"
    android:background="@color/colorRegistry"
    android:gravity="center"
    android:layout_gravity="center">


    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_Registrarse"
        android:onClick="llevarARegistro"
        android:background="@drawable/rectangular_button"
        android:gravity="center"
    />
    
    <TextView
        android:layout_width="@dimen/long_label"
        android:layout_height="wrap_content"
        android:lines="2"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/btn_iniciar_sesion_como_invi"
        android:onClick="entrarComoInvitado"
        android:gravity="center"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/btn_iniciar_sesion"
        android:background="@drawable/rectangular_button"
        android:onClick="entrarValidando"
        android:gravity="center"
        />
</LinearLayout>
