<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ec.edu.epn.findme.Alerts">

    <ScrollView
        android:id="@+id/activeSearchesScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activeSearchesLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_alerts_title"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="26sp"
                android:id="@+id/alerts_title_tv"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:id="@+id/alerts_recycle_view"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_alert"
                    android:layout_marginTop="16dp"
                    android:id="@+id/add_new_alert"
                    android:onClick="agregarNuevaAlerta"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/approve_alert"
                    android:layout_marginTop="16dp"
                    android:id="@+id/approve_alert"
                    android:onClick="aprobarNuevaAlerta"
                    android:textStyle="bold"/>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
